# AgeAlyser_2

./: .gitignore  .gitmodules  LICENSE  Map.csv  README.md  game_data_script.py  main.py  player_loc.csv  pyproject.toml  setup.py
.github/workflows/: python-package.yml
Data/: Building.csv  Technologies.csv
Data/GameData/: Technologies.csv  mgz_enums.py
Data/RawAoe2RecordBytes/: AOE2ReplayBinary_15.aoe2record
Data/TestGameDataExploration/: Player1_actions.csv  Player1_inputs_prod_buildings.csv  Player2_actions.csv  Player2_inputs.csv  Player2_inputs_prod_buildings.csv
DataExploration/: Player1_inputs.csv  actions.csv  inputs.csv
age-alyser/: enums.py  main.py  utils.py
age-alyser/Data/: Building.csv  Technologies.csv  Units.csv
github/workflows/: ci.yaml  ci.yml
src/agealyser/: __init__.py  agealyser_enums.py  enums.py  main.py  utils.py
tests/: test.py  test_.py
tests/Test_Games/: AOE2ReplayTestBinary_3.aoe2record  AOE2ReplayTestBinary_7.aoe2record  E2E_276_Results.csv  README_notes.txt  SD-AgeIIDE_Replay_366825453.aoe2record  Test_results.csv  regression_testing_correct_results.csv  regression_testing_test_results.csv  regression_testing_test_results.parquet  regression_testing_test_results_check.csv  testing_eval_results.csv
tests/Test_Games/Game_Data_Structures/: All_Inputs.csv  Player1_actions.csv  Player1_buildings.csv  Player1_inputs.csv  Player1_queue.csv  Player1_technologies.csv  Player1_units.csv  Player1_unqueue.csv  Player2_actions.csv  Player2_buildings.csv  Player2_inputs.csv  Player2_queue.csv  Player2_technologies.csv  Player2_units.csv  Player2_unqueue.csv
