[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "age-alyser"
version = "0.0.2"
authors = [
  { name="Benjamin Byrnes", email="b.byrnesy@gmail.com" },
]
description = "A python package for extracting key features of an AOE2 recorded games"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
  "mgz>=1.8.28",
  "pandas>=2.2.2",
  "numpy>=2.0.0",
  "scipy>=1.14.0",
  "shapely>=2.0.5",
]
keywords = [
  "statistics",
  "AOE2",
  "Age of Empires",
  "parsing",
  "mgz",
]


[project.urls]
Homepage = "https://github.com/byrnesy924/AgeAlyser_2"
Issues = "https://github.com/byrnesy924/AgeAlyser_2/issues"

[flake8]
max-line-length = 140

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

